[tool.poetry]
name = "scrappin"
version = "0.1.0"
description = "Boilerplate to start scrapping a webpage using Selenium and Firefox."
authors = ["Victor Rojas <victor@admetricks.com>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.1.3"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
